# genai-devops

./: .gitignore  README.md  pyproject.toml
genie/: __init__.py  agent.py  app.py  audio_utils.py  kalavai_api.py  parse_specs.py
genie/tools/: autopilot_tools.py  pool_tools.py  test_tools.py
